Web Inspector: RTL: layout issues in debugger dashboard, arrows are on wrong side https://bugs.webkit.org/show_bug.cgi?id=170425
Reviewed by Devin Rousso.

We need to move the up/down dashboard arrows to the trailing side for RTL.
Clean up some messy spacing rules so that the source location does not
overlap the arrows or get too close to the function icon.

* UserInterface/Views/DashboardContainerView.css:
(.toolbar .dashboard):
(body[dir=ltr] .toolbar .dashboard):
(body[dir=rtl] .toolbar .dashboard):
(.dashboard-container .advance-arrow):
(body[dir=ltr] .dashboard-container .advance-arrow):
(body[dir=rtl] .dashboard-container .advance-arrow):
(.toolbar.label-only .dashboard-container .advance-arrow):
(body[dir=ltr] .toolbar.label-only .dashboard-container .advance-arrow):
(body[dir=rtl] .toolbar.label-only .dashboard-container .advance-arrow):
* UserInterface/Views/DebuggerDashboardView.css:
(.toolbar .dashboard.debugger):
(body[dir=ltr] .toolbar .dashboard.debugger):
(body[dir=rtl] .toolbar .dashboard.debugger):
(.dashboard.debugger .navigation-bar):
(body[dir=ltr] .dashboard.debugger .navigation-bar):
(body[dir=rtl] .dashboard.debugger .navigation-bar):
(.dashboard.debugger > .location):
(.dashboard.debugger > .location > :first-child):
(body[dir=ltr] .dashboard.debugger > .location > :last-child):
(body[dir=rtl] .dashboard.debugger > .location > :last-child):
(.dashboard.debugger > .location .function-icon):
(body[dir=ltr] .dashboard.debugger > .location .function-icon):
(body[dir=rtl] .dashboard.debugger > .location .function-icon):
(.dashboard.debugger > .location .go-to-link):


Canonical link: https://commits.webkit.org/187383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214899 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DashboardContainerView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DashboardContainerView.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013-2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2017 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -72,9 +72,20 @@ body.javascript .toolbar .dashboard-container {
     left: 0;
     right: 0;
 
-    padding: 0 10px 0 5px;
-
     animation-duration: 0.4s;
+
+    --dashboard-padding-start: 10px;
+    --dashboard-padding-end: 5px;
+}
+
+body[dir=ltr] .toolbar .dashboard {
+    padding-left: var(--dashboard-padding-start);
+    padding-right: var(--dashboard-padding-end);
+}
+
+body[dir=rtl] .toolbar .dashboard {
+    padding-left: var(--dashboard-padding-end);
+    padding-right: var(--dashboard-padding-start);
 }
 
 .toolbar .dashboard.visible {
@@ -123,7 +134,6 @@ body.javascript .toolbar .dashboard-container {
 
 .dashboard-container .advance-arrow {
     position: absolute;
-    right: 0;
     width: 19px;
     top: 0;
     bottom: 0;
@@ -138,6 +148,16 @@ body.javascript .toolbar .dashboard-container {
     transition-property: opacity;
     transition-duration: 0.2s;
     background-clip: content-box;
+
+    --dashboard-advance-arrow-offset-end: 0px;
+}
+
+body[dir=ltr] .dashboard-container .advance-arrow {
+    right: var(--dashboard-advance-arrow-offset-end);
+}
+
+body[dir=rtl] .dashboard-container .advance-arrow {
+    left: var(--dashboard-advance-arrow-offset-end);
 }
 
 .dashboard-container .advance-arrow:hover {
@@ -156,8 +176,24 @@ body.javascript .toolbar .dashboard-container {
 .toolbar.label-only .dashboard-container .advance-arrow {
     width: 8px;
     height: 8px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     margin: 2px 4px 2px 2px;
+
     background-size: 6px;
+
+    --dashboard-advance-arrow-margin-start: 2px;
+    --dashboard-advance-arrow-margin-end: 4px;
+}
+
+body[dir=ltr] .toolbar.label-only .dashboard-container .advance-arrow {
+    margin-left: var(--dashboard-advance-arrow-margin-start);
+    margin-right: var(--dashboard-advance-arrow-margin-end);
+}
+
+body[dir=rtl] .toolbar.label-only .dashboard-container .advance-arrow {
+    margin-left: var(--dashboard-advance-arrow-margin-end);
+    margin-right: var(--dashboard-advance-arrow-margin-start);
 }
 
 .dashboard-container .advance-arrow.advance-forward {
